syntax = "proto2";

package protocol;

message Node {
  required bytes id = 1;
  required string address = 2;
  required uint32 port = 3;
}

message Call {
  required string name = 1;
  required bytes args = 2;
}

message Return {
  required bool success = 1;
  required bytes value = 2;
}

message FindSuccessorArgs { required bytes id = 1; }

message FindSuccessorRet { required Node node = 1; }

message NotifyArgs { required Node node = 1; }

message NotifyRet {}

message GetPredecessorArgs {}

message GetPredecessorRet { optional Node node = 1; }

message GetSuccessorListArgs { required bytes id = 1; }

message GetSuccessorListRet { repeated Node successors = 1; }
